// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table users {
  id int [pk, increment]
  username string
  password_digest string
  phone string
  email string
  wechat_open_id string
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table referrals {
  id int [pk, increment]
  code string [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
  // 被推荐人，下游
  referred_id integer [ref: > users.id]
  // 上游推荐人
  referrer_id integer [ref: > users.id]
}

// 聊天表
Table chats {
  id bigint [pk, increment]
  user_id bigint [ref: - users.id, not null]
  api_key_id bigint [ref: - api_keys.id]
  name varchar
  created_at datetime [not null]
  updated_at datetime [not null]
}

// 消息记录表
Table messages {
  id bigint [pk, increment]
  chat_id bigint [ref: - chats.id, not null]
  content text
  role varchar
  created_at datetime [not null]
  updated_at datetime [not null]
}

// OpenAI API Key 表
Table api_keys {
  id bigint [pk, increment]
  account string [not null]
  content string [not null]
  status boolean [Note: '可用/失效']
  created_at datetime [not null]
  updated_at datetime [not null]
}
